# Cyanide

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt  requirements.txt  vcpkg.json
code/include/: CMakeLists.txt
code/include/audio/audio_devices/: AudioDevice.hpp
code/include/audio/interfaces/: IAudioDevice.hpp  IAudioDriver.hpp
code/include/cyaudio/: CMakeLists.txt  IAudioDevice.hpp  IMedium.hpp  SDLAudio.hpp  SDLMixerAudio.hpp  cyaudio.hpp
code/include/cyaudio/audio_devices/: SDLAudioDevice.hpp
code/include/cyaudio/devices/: IAudioDevice.hpp  SDLAudioDevice.hpp
code/include/cyaudio/medium/: IMedium.hpp  SDLMusic.hpp
code/include/cyaudio/player/: AudioPlayer.hpp  Playlist.hpp
code/include/cygui/: CMakeLists.txt  GUIObjectManager.hpp  GUIRenderManager.hpp  cygui.hpp
code/include/cygui/input/: ObjectInput.hpp
code/include/cygui/layout/: Box.hpp  Grid.hpp  HBox.hpp  IBox.hpp  ILayout.hpp  VBox.hpp
code/include/cygui/styles/: BoxStyle.hpp  ButtonStyle.hpp  ObjectStyle.hpp  Style.hpp  Styles.hpp  TextStyle.cpp  TextStyle.hpp  TextWidgetStyle.hpp  WidgetStyle.hpp
code/include/cygui/widgets/: Button.hpp  Object.hpp  TextWidget.hpp  Widget.hpp
code/include/cyinput/: CMakeLists.txt  Controller.hpp  IInputDevice.hpp  IKey.hpp  Key.hpp  KeyCombination.hpp  Keyboard.hpp  Keymod.hpp  Keys.hpp  Mouse.hpp  SDLEventLoop.hpp  cyinput.hpp  inputPrototypes.hpp
code/include/cyinput/controller/: Controller.hpp  ControllerInput.hpp  IController.hpp
code/include/cyinput/joystick/: IJoystick.hpp  Joystick.hpp  JoystickInput.hpp
code/include/cyinput/keyboard/: IKey.hpp  IKeyboard.hpp  Key.hpp  KeyCombination.hpp  Keyboard.hpp  KeyboardInput.hpp  Keymod.hpp  Keys.hpp  SDLKey.hpp
code/include/cyinput/mouse/: Mouse.hpp  MouseInput.hpp
code/include/cyinput/window/: WindowInput.hpp
code/include/cymath/: CMakeLists.txt  Line.hpp  Point.hpp  Rectangle.hpp  Size.hpp  Space.hpp  Vector.hpp  cymath.hpp  scaling.hpp
code/include/cynet/: CMakeLists.txt  IClient.hpp  IIPAddress.hpp  IP4Address.hpp  ISDLSocket.hpp  IServer.hpp  ISocket.hpp  ITCPSocket.hpp  NetworkCommand.hpp  NetworkPackage.hpp  SDLTCPClient.hpp  SDLTCPServer.hpp  SDLTCPSocket.hpp  cynet.hpp  netPrototypes.hpp
code/include/cynet/tcp/: ITCPClient.hpp  ITCPServer.hpp  SDLTCPClient.hpp  SDLTCPServer.hpp  SDLTCPSocket.hpp
code/include/cyscript/lua/: Lua.hpp  MetaTable.hpp  Table.hpp
code/include/cyscript/python/: Python.hpp
code/include/cystd/: CMakeLists.txt  CyObj.hpp  Enum.hpp  NonCopyable.hpp  NonMoveable.hpp  Range.hpp  Types.hpp  cystd.hpp  prototypes.hpp  stdDefine.hpp  stdPrototypes.hpp
code/include/cysystem/: CMakeLists.txt  Cyanide.hpp  ICommand.hpp  IDispatcher.hpp  IScheduler.hpp  ITask.hpp  Platform.hpp  Scheduler.hpp  SchedulerTask.hpp  Thread.hpp  cysystem.hpp
code/include/cysystem/sdl/: SDL.hpp  SDLEventLoop.hpp
code/include/cyutil/: CMakeLists.txt  util.hpp
code/include/cyutil/animation/: Animation.hpp  IAnimationStep.hpp
code/include/cyutil/color/: Color.hpp  IColor.hpp  RGBAColor.hpp
code/include/cyutil/io/: BitStreamReader.cpp  BitStreamReader.hpp  ByteStreamReader.hpp  IReader.hpp  IWriter.hpp  Print.hpp  ioPrototypes.hpp
code/include/cyutil/logging/: Logging.hpp
code/include/cyutil/serialize/: ISerialize.hpp
code/include/cyutil/threading/: IScheduler.hpp  ITask.hpp  IntervalScheduler.hpp  Scheduler.hpp  SchedulerTask.hpp  Thread.hpp  ThreadedTask.hpp
code/include/cyutil/time/: Clock.hpp  ITimer.hpp  SDLPerformanceTimer.hpp  SDLTimer.hpp  Timer.hpp  time.hpp
code/include/cyutil/type/: TypeEnum.hpp  TypeName.hpp
code/include/cyvideo/: CMakeLists.txt  Display.hpp  IDisplay.hpp  IFont.hpp  IRenderer.hpp  ISurface.hpp  ITexture.hpp  IWindow.hpp  SDLDisplay.hpp  SDLFont.hpp  SDLRenderer.hpp  SDLSurface.hpp  SDLTexture.hpp  SDLVideo.hpp  SDLWindow.hpp  cyvideo.hpp  videoPrototypes.hpp
code/include/cyvideo/animation/: Animation.hpp
code/include/cyvideo/color/: IColor.hpp  RGBAColor.hpp
code/include/cyvideo/display/: IDisplay.hpp  SDLDisplay.hpp
code/include/cyvideo/font/: IFont.hpp  SDLFont.hpp  SDLFontCollection.hpp
code/include/cyvideo/renderer/: GUIRenderManager.hpp  IRenderer.hpp  SDLRenderer.hpp
code/include/cyvideo/window/: IWindow.hpp  SDLWindow.hpp
code/source/: CMakeLists.txt
code/source/cyaudio/: CMakeLists.txt  SDLAudio.cpp  SDLMixerAudio.cpp
code/source/cyaudio/audio_devices/: SDLAudioDevice.cpp
code/source/cyaudio/devices/: SDLAudioDevice.cpp
code/source/cyaudio/medium/: SDLMusic.cpp
code/source/cyaudio/player/: AudioPlayer.cpp  Playlist.cpp
code/source/cygui/: CMakeLists.txt  GUIObjectManager.cpp  GUIRenderManager.cpp
code/source/cyinput/: CMakeLists.txt  Controller.cpp  Key.cpp  KeyCombination.cpp  Keyboard.cpp  Keymod.cpp  Mouse.cpp  SDLEventLoop.cpp
code/source/cymath/: CMakeLists.txt  Line.cpp  Point.cpp  Rectangle.cpp  Size.cpp  Space.cpp  Vector.cpp
code/source/cynet/: CMakeLists.txt  IP4Address.cpp  ISDLSocket.cpp  ISocket.cpp  ITCPClient.cpp  ITCPServer.cpp  ITCPSocket.cpp  NetworkPackage.cpp  SDLTCPClient.cpp  SDLTCPServer.cpp  SDLTCPSocket.cpp
code/source/cyscript/: CMakeLists.txt
code/source/cystd/: CMakeLists.txt
code/source/cysystem/: CMakeLists.txt  Cyanide.cpp  Platform.cpp  Scheduler.cpp  SchedulerTask.cpp
code/source/cyutil/: CMakeLists.txt
code/source/cyvideo/: CMakeLists.txt  Display.cpp  SDLDisplay.cpp  SDLFont.cpp  SDLRenderer.cpp  SDLSurface.cpp  SDLTexture.cpp  SDLVideo.cpp  SDLWindow.cpp
code/test/: CMakeLists.txt
code/test/cyaudio/: CMakeLists.txt  test.cpp
code/test/cygui/: CMakeLists.txt  test_box.cpp
code/test/cyinput/: CMakeLists.txt
code/test/cymath/: CMakeLists.txt  test_Line.cpp  test_Point.cpp  test_Rectangle.cpp  test_Size.cpp  test_Space.cpp  test_Vector.cpp  test_line.cpp  test_point.cpp  test_rectangle.cpp  test_size.cpp  test_space.cpp
code/test/cynet/: CMakeLists.txt
code/test/cysystem/: CMakeLists.txt
code/test/cyutil/: CMakeLists.txt
code/test/cyvideo/: CMakeLists.txt  test.cpp  test_SDLTexture.cpp
(+79 files in other folders)
